// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component should allow expandable content: expandable content 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      onCollapse={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
            "isOpen": false,
          },
          Object {
            "cells": Array [
              Object {
                "title": "",
              },
            ],
            "expandedContent": "dolor sit expandable content",
            "fullWidth": true,
            "parent": 0,
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow expandable content: expanded row 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      onCollapse={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
            "isOpen": true,
          },
          Object {
            "cells": Array [
              Object {
                "title": "dolor sit expandable content",
              },
            ],
            "expandedContent": "dolor sit expandable content",
            "fullWidth": false,
            "parent": 0,
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow sortable content: sortable content 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "onSort": [MockFunction],
            "title": "lorem ipsum",
            "transforms": Array [
              [Function],
            ],
          },
        ]
      }
      className="curiosity-table "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      onSort={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      sortBy={Object {}}
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow sortable content: sorted column callback 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "onSort": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "direction": "asc",
                    "index": 0,
                    "label": undefined,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "title": "lorem ipsum",
            "transforms": Array [
              [Function],
            ],
          },
        ]
      }
      className="curiosity-table "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      onSort={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      sortBy={
        Object {
          "direction": "asc",
          "index": 0,
        }
      }
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: ariaLabel and summary 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="lorem ipsum aria-label"
      borders={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table-no-border "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="lorem ipsum summary"
      variant={null}
    >
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: borders and table header removed 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table-no-border "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: className and variant 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="lorem ipsum aria-label"
      borders={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table-no-border lorem-ipsum-class"
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="lorem ipsum summary"
      variant="compact"
    >
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: generated rows 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": "dolor",
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <Component />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should pass child components, nodes when there are no rows: children 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={Array []}
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <Component />
    </Table>
    Loading...
  </GridItem>
</Grid>
`;

exports[`Table Component should render a non-connected component: non-connected 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      aria-label="t(curiosity-inventory.tableAriaLabel, {\\"appName\\":\\"Subscriptions\\"})"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "lorem",
          },
          Object {
            "title": "ipsum",
          },
          Object {
            "title": "dolor",
          },
          Object {
            "title": "sit",
          },
        ]
      }
      className="curiosity-table "
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={Array []}
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <Component />
    </Table>
    <TableEmpty
      icon={[Function]}
      message="t(curiosity-inventory.tableEmptyInventoryMessage)"
      tableHeading="h2"
      title="t(curiosity-inventory.tableEmptyInventoryTitle)"
      variant="small"
    />
  </GridItem>
</Grid>
`;
